@@ -137,7 +137,6 @@ SRC = $(TARGET).c                                                 \
 	  $(LUFA_PATH)/LUFA/Drivers/USB/HighLevel/ConfigDescriptor.c  \
 	  $(LUFA_PATH)/LUFA/Drivers/USB/Class/Device/HID.c            \
 	  $(LUFA_PATH)/LUFA/Drivers/USB/Class/Host/HID.c              \
-	  $(LUFA_PATH)/LUFA/Drivers/USB/Class/Host/HIDParser.c        \
 	  
 
 # List C++ source files here. (C dependencies are automatically generated.)
